--- a/app/templates/citas.html
+++ b/app/templates/citas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/app/styles/styles.css">
     <title>Lista Medicos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <section class="tabla container">
@@ -15,11 +16,11 @@
         <a href="http://127.0.0.1:5000/citas">Citas</a>
     </nav>
     <h1>Lista De Citas</h1>
-    <table>
+    <table class="table table-success table-striped">
         <thead>
             <tr>
                 <th>Orden</th>
-                <th>Fecha</th>
+                <th>Fecha Y Hora</th>
                 <th>Paciente</th>
                 <th>Medico</th>
                 <th>Consultorio</th>
