--- a/app/templates/consultorios.html
+++ b/app/templates/consultorios.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/styles.css">
     <title>Lista Medicos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <section class="tabla container">
@@ -15,16 +16,22 @@
         <a href="http://127.0.0.1:5000/citas">Citas</a>
     </nav>
     <h1>Lista De Consultorios</h1>
-    <table>
+    <table class="table table-success table-striped">
         <thead>
             <tr>
                 <th>Consultorio</th>
+                <th>Ver Detalles</th>
             </tr>
         </thead>
         <tbody>
             {% for consultorio in consultorios %}
                 <tr>
                     <td>{{ consultorio.numero }}</td>
+                    <td>
+                        <a href="/consultorio/{{ consultorio.id }}">
+                            Ver Detalles
+                        </a>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
