--- a/app/templates/medicos.html
+++ b/app/templates/medicos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/app/styles/styles.css">
     <title>Lista Medicos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <section class="tabla container">
@@ -15,13 +16,16 @@
         <a href="http://127.0.0.1:5000/citas">Citas</a>
     </nav>
     <h1>Lista De Medicos</h1>
-    <table>
+    <table class="table table-success table-striped">
         <thead>
             <tr>
                 <th>Nombre</th>
                 <th>Apellidos</th>
+                <th>Tipo De Documento</th>
                 <th>N° Documento</th>
+                <th>Registro Medico</th>
                 <th>Especialidad</th>
+                <th>Ver Detalles</th>
             </tr>
         </thead>
         <tbody>
@@ -29,8 +33,15 @@
                 <tr>
                     <td>{{ medico.nombres }}</td>
                     <td>{{ medico.apellidos }}</td>
+                    <td>{{ medico.tipo_identificacion}}</td>
                     <td>{{ medico.numero_identificacion}}</td>
+                    <td>{{ medico.registro_medico}}</td>
                     <td>{{ medico.especialidad }}</td>
+                    <td>
+                        <a href="/medicos/{{ medico.id }}">
+                            Ver Detalles
+                        </a>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
