--- a/app/templates/pacientes.html
+++ b/app/templates/pacientes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/app/styles/styles.css">
     <title>Lista Medicos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <section class="tabla container">
@@ -15,7 +16,7 @@
         <a href="http://127.0.0.1:5000/citas">Citas</a>
     </nav>
     <h1>Lista De Pacientes</h1>
-    <table>
+    <table class="table table-success table-striped">
         <thead>
             <tr>
                 <th>Nombre</th>
@@ -23,6 +24,7 @@
                 <th>N° Documento</th>
                 <th>Altura</th>
                 <th>Tipo de sangre</th>
+                <th>Ver Detalles</th>
             </tr>
         </thead>
         <tbody>
@@ -33,6 +35,11 @@
                     <td>{{ paciente.numero_identificacion }}</td>
                     <td>{{ paciente.altura }}</td>
                     <td>{{ paciente.tipo_sangre }}</td>
+                    <td>
+                        <a href="/pacientes/{{ paciente.id }}">
+                            Ver Detalles
+                        </a>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
