--- a/app/templates/consultorios.html
+++ b/app/templates/consultorios.html
@@ -35,7 +35,7 @@
                 </tr>
             {% endfor %}
         </tbody>
-        <tfoot></tfoot>
+        <tfoot><a href="http://127.0.0.1:5000/consultorios/create">Crear Nuevo Consultorio</a></tfoot>
     </table>
 </section>
 
