--- a/app/templates/pacientes.html
+++ b/app/templates/pacientes.html
@@ -43,7 +43,7 @@
                 </tr>
             {% endfor %}
         </tbody>
-        <tfoot></tfoot>
+        <tfoot><a href="http://127.0.0.1:5000/pacientes/create">Crear Nuevo Paciente</a></tfoot>
     </table>
 </section>
 </body>
