--- a/app/templates/medico_form.html
+++ b/app/templates/medico_form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formulario_med</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <h1>Nuevo Medico</h1>
@@ -25,6 +26,7 @@
             </select>
         </p>
         <button type="submit">Guardar</button>
+    <a href="http://127.0.0.1:5000/medicos">Volver</a>
 
 
     </form>
