--- a/app/templates/medicos.html
+++ b/app/templates/medicos.html
@@ -45,8 +45,8 @@
                 </tr>
             {% endfor %}
         </tbody>
-        <tfoot></tfoot>
+        <tfoot><a href="http://127.0.0.1:5000/medicos/create">Crear Nuevo Medico</a></tfoot>
     </table>
 </section>
-</body>
+</body> 
 </html>
