--- a/app/templates/paciente_form.html
+++ b/app/templates/paciente_form.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formulario_pac</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <h1>Nuevo Paciente</h1>
-    <form method="post" action="">
-        <p>Nombre:  <input type="text" Name="nombres"  /> </p>
-        <p>Apellidos:  <input type="text" Name="apellidos"  /> </p>
-        <p>Tipo De Documento:  <select name="CC">
+    <form method="POST" action="">
+        <p>Nombre:  <input type="text" Name="nom"  /> </p>
+        <p>Apellidos:  <input type="text" Name="apell"  /> </p>
+        <p>Tipo De Documento:  <select name="doc">
             <option>CC</option>
             <option>TI</option>
             </select>
         </p>
-        <p>N° Documento:  <input type="text" Name="nd"  /> </p>
+        <p>N° Documento:  <input type="text" Name="numdoc"  /> </p>
         <p>Estatura En CM:  <input type="text" Name="est"  /> </p>
         <p>Tipo De Sangre <input type="text" Name="ts"  /> </p>
         <button type="submit">Guardar</button>
+    
+        <a href="http://127.0.0.1:5000/pacientes">Volver</a>
 
 
     </form>
