--- a/app/templates/medicos.html
+++ b/app/templates/medicos.html
@@ -16,6 +16,15 @@
         <a href="http://127.0.0.1:5000/citas">Citas</a>
     </nav>
     <h1>Lista De Medicos</h1>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+                <ul class=flashes>
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+    {% endwith %}
     <table class="table table-success table-striped">
         <thead>
             <tr>
@@ -26,6 +35,8 @@
                 <th>Registro Medico</th>
                 <th>Especialidad</th>
                 <th>Ver Detalles</th>
+                <th>Actualizar</th>
+                <th>Eliminar</th>
             </tr>
         </thead>
         <tbody>
@@ -40,6 +51,16 @@
                     <td>
                         <a href="/medicos/{{ medico.id }}">
                             Ver Detalles
+                        </a>
+                    </td>
+                    <td>
+                        <a href="/medicos/update/{{ medico.id }}">
+                            Actualizar
+                        </a>
+                    </td>
+                    <td>
+                        <a href="/medicos/delete/{{ medico.id }}">
+                            Eliminar
                         </a>
                     </td>
                 </tr>
