--- a/app/templates/consultorios.html
+++ b/app/templates/consultorios.html
@@ -16,6 +16,15 @@
         <a href="http://127.0.0.1:5000/citas">Citas</a>
     </nav>
     <h1>Lista De Consultorios</h1>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+                <ul class=flashes>
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+    {% endwith %}
     <table class="table table-success table-striped">
         <thead>
             <tr>
